<resources>
    <string name="app_name">Lat2-if9-10120761-MuhamadRizanKarindra</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="connect_with_facebook">connect with facebook</string>
    <string name="kata_Awal_pertama">doesn\'t have account ?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="male">Male</string>
    <string name="famale">Famale</string>
    <string name="blood_type">Blood Type</string>
    <string name="reshus">Reshus</string>
    <string name="retype_password">Retype Password</string>
    <string name="personal">Personal</string>
    <string name="organization">Organization</string>
    <string name="job">Job</string>
    <string name="home_addreas" />
    <string name="home_addreas2">Home Addreas</string>
    <string name="default_location">Default Location</string>
    <string name="kata2">Agree with Terms and Conditions</string>
    <string name="almost_there">Almost There</string>
    <string name="kata3">Thank you for registering with us. One more</string>
    <string name="kata4">" step, you nedd to check your email"</string>
    <string name="kata5">to active your account</string>
    <string name="kata4re">step, you nedd to check your email</string>
    <string name="verify">Verify</string>
    <string name="kata11">Verify Your Account</string>
    <string name="kata12">We have send verification code to your email</string>
    <string name="kata13">enter verification code here...</string>
    <string name="send">Send</string>
    <string name="kata15">" doesn't get the code? "</string>
    <string name="kata15re">doesn\'t get the code?</string>
    <string name="resend">Resend</string>
    <string name="nama">Muhamad Rizan Karindra</string>
    <string name="blood_typeB">Blood Type : B</string>
    <string name="angka1">75</string>
    <string name="angka2">100</string>
    <string name="angka3">330</string>
    <string name="BLOOD_GIVE">BLOOD GIVE</string>
    <string name="BLOOD_RECEIVED">" BLOOD RECEIVED "</string>
    <string name="THANKS">THANKS</string>
    <string name="Search_Donor">Search Donor</string>
    <string name="Blood_Needed">Blood Needed</string>
    <string name="Search_donor_near_you">Search donor near you</string>
    <string name="Users_need_blood">4 Users need blood</string>
    <string name="Message">Message</string>
    <string name="Donor_History">Donor History</string>
    <string name="AMessages">5 New Messages</string>
    <string name="GiveRE">" 5 Gives, 2 Received"</string>
    <string name="Ini">5 Gives, 2 Received</string>
</resources>